--- a/components/list/list.html
+++ b/components/list/list.html
@@ -45,7 +45,7 @@
             <main>
                 <div class="content-section-container">
                     <aside class="aside-left">
-                        <div class="moving-container">
+                        <div class="moving-container aside-left-height">
                             <div class="aside-list-container txt-align-center">
                                 <ul>
                                     <h3>Get started</h3>
@@ -66,7 +66,8 @@
                                     <li class="aside-list"><a href="../input/input.html">Input</a></li>
                                     <li class="aside-list"><a href="../typography/typography.html">Typography</a></li>
                                     <li class="aside-list active-list-item"><a href="./list.html">List</a></li>
-                                    
+                                    <li class="aside-list"><a href="../navigation/navigation.html">Navigation</a></li>
+                                    <li class="aside-list"><a href="../modal/modal.html">Modal</a></li>
                                 </ul>
                             </div>
                         </div>
