--- a/components/alert/alert.html
+++ b/components/alert/alert.html
@@ -47,7 +47,7 @@
             <main>
                 <div class="content-section-container">
                     <aside class="aside-left">
-                        <div class="moving-container">
+                        <div class="moving-container aside-left-height">
                             <div class="aside-list-container txt-align-center">
                                 <ul>
                                     <h3>Get started</h3>
@@ -68,6 +68,8 @@
                                     <li class="aside-list"><a href="../input/input.html">Input</a></li>
                                     <li class="aside-list"><a href="../typography/typography.html">Typography</a></li>
                                     <li class="aside-list"><a href="../list/list.html">List</a></li>
+                                    <li class="aside-list"><a href="../navigation/navigation.html">Navigation</a></li>
+                                    <li class="aside-list"><a href="../modal/modal.html">Modal</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -105,7 +107,7 @@
                                 </script>
                             </div>
                         </section>
-
+                        
                         <div class="divider mb-2"></div>
                         <h2 class="mb-2"  id="success-alert">Success alert</h2>
                         <p class="mb-2">Use the class <code class="code-text">alert-success-solid</code> for showing the alert with full solid background and for just outline use <code class="code-text">alert-success-outline</code>.</p>
