--- a/components/input/input.html
+++ b/components/input/input.html
@@ -46,7 +46,7 @@
             <main>
                 <div class="content-section-container">
                     <aside class="aside-left">
-                        <div class="moving-container">
+                        <div class="moving-container aside-left-height">
                             <div class="aside-list-container txt-align-center">
                                 <ul>
                                     <h3>Get started</h3>
@@ -67,6 +67,8 @@
                                     <li class="aside-list active-list-item"><a href="./input.css">Input</a></li>
                                     <li class="aside-list"><a href="../typography/typography.html">Typography</a></li>
                                     <li class="aside-list"><a href="../list/list.html">List</a></li>
+                                    <li class="aside-list"><a href="../navigation/navigation.html">Navigation</a></li>
+                                    <li class="aside-list"><a href="../modal/modal.html">Modal</a></li>
                                 </ul>
                             </div>
                         </div>
