--- a/components/navigation/navigation.html
+++ b/components/navigation/navigation.html
@@ -6,11 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../prism/prism.css">
     <link rel="stylesheet" href="../../CSS/documentation.css">
-    <link rel="stylesheet" href="../avatar/avatar.css">
-    <link rel="stylesheet" href="./badge.css">
+    <link rel="stylesheet" href="./navigation.css">
     <script src="../../prism/prism.js"></script>
-    <!-- <script src="https://kit.fontawesome.com/fd5cc9ac67.js" crossorigin="anonymous" defer></script> -->
-    <title>Badges | ZestUI</title>
+    <title>Navigation | ZestUI</title>
 </head>
 <body>
     <!-- <div class="mega-parent-flex-container"> -->
@@ -59,7 +57,7 @@
                                 <ul>
                                     <h3>Components</h3>
                                     <li class="aside-list"><a href="../avatar/avatar.html">Avatar</a></li>
-                                    <li class="aside-list active-list-item"><a href="./badge.html">Badge</a></li>
+                                    <li class="aside-list"><a href="../badges/badge.html">Badge</a></li>
                                     <li class="aside-list"><a href="../alert/alert.html">Alert</a></li>
                                     <li class="aside-list"><a href="../button/button.html">Button</a></li>
                                     <li class="aside-list"><a href="../card/card.html">Card</a></li>
@@ -67,76 +65,78 @@
                                     <li class="aside-list"><a href="../input/input.html">Input</a></li>
                                     <li class="aside-list"><a href="../typography/typography.html">Typography</a></li>
                                     <li class="aside-list"><a href="../list/list.html">List</a></li>
-                                    <li class="aside-list"><a href="../navigation/navigation.html">Navigation</a></li>
+                                    <li class="aside-list"><a href="./navigation.html">Navigation</a></li>
                                     <li class="aside-list"><a href="../modal/modal.html">Modal</a></li>
                                 </ul>
                             </div>
                         </div>
                     </aside>
                     <div class="content-main-section">
-                        <h1>Badge</h1>
-                        <p class="mb-2">Badge can be used to show either status of the user (online, or offline) or you can use it show notification count.</p>
+                        <h1>Navigation</h1>
+                        <p class="mb-2">Navigation bar is used to navigate through the web apps or websites.</p>
                         <div class="divider mb-2"></div>
-                        <h2 class="mb-2"  id="badge-on-avatar">Badge on avatars</h2>
-                        <p class="mb-2">We have three types of badges to display user's status. Use <code class="code-text">online</code> for status Online just like use <code class="code-text">offline</code> , <code class="code-text">dnd</code> for offline and dnd respectively.</p>
+                        <h2 class="mb-2" id="navigation-bar">Navigation bar</h2>
                         <section class="component-scetion mb-2">
                             <div class="component-display">
-
-                                <!-- Badge Component code -->
-                                <div class="avatar av-sm">
-                                    <img src="../../assets/imgs/batman-profile.jpg" alt="demo avatar">
-                                    <div class="badge online right bottom"></div>
-                                </div>
-                                <div class="avatar av-sm">
-                                    <img src="../../assets/imgs/spidey-pic.jpg" alt="demo avatar">
-                                    <div class="badge offline right bottom"></div>
-                                </div>
-                                <div class="avatar av-sm">
-                                    <img src="../../assets/imgs/deadpool-pic.jpg" alt="demo avatar">
-                                    <div class="badge dnd right bottom"></div>
-                                </div>
+                                <nav class="navigation-bar">
+                                    <div class="lib-name">
+                                        <a href="./index.html">ZestUI</a>
+                                    </div>
+                                    <div class="nav-list">
+                                        <ul>
+                                            <li><a href="#">Docs</a></li>
+                                            <li><a href="#">Examples</a></li>
+                                        </ul>
+                                    </div>
+                                    <div class="social-icon m-left-auto">
+                                        <div class="nav-icon">
+                                            <a href="https://twitter.com/DipenChavda2" target="_blank">
+                                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--mdi" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path d="M22.46 6c-.77.35-1.6.58-2.46.69c.88-.53 1.56-1.37 1.88-2.38c-.83.5-1.75.85-2.72 1.05C18.37 4.5 17.26 4 16 4c-2.35 0-4.27 1.92-4.27 4.29c0 .34.04.67.11.98C8.28 9.09 5.11 7.38 3 4.79c-.37.63-.58 1.37-.58 2.15c0 1.49.75 2.81 1.91 3.56c-.71 0-1.37-.2-1.95-.5v.03c0 2.08 1.48 3.82 3.44 4.21a4.22 4.22 0 0 1-1.93.07a4.28 4.28 0 0 0 4 2.98a8.521 8.521 0 0 1-5.33 1.84c-.34 0-.68-.02-1.02-.06C3.44 20.29 5.7 21 8.12 21C16 21 20.33 14.46 20.33 8.79c0-.19 0-.37-.01-.56c.84-.6 1.56-1.36 2.14-2.23z" fill="currentColor"></path></svg>
+                                            </a>
+                                        </div>
+                                        <div class="nav-icon">
+                                            <a href="https://github.com/dipen2000" target="_blank">
+                                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--mdi" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5c.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34c-.46-1.16-1.11-1.47-1.11-1.47c-.91-.62.07-.6.07-.6c1 .07 1.53 1.03 1.53 1.03c.87 1.52 2.34 1.07 2.91.83c.09-.65.35-1.09.63-1.34c-2.22-.25-4.55-1.11-4.55-4.92c0-1.11.38-2 1.03-2.71c-.1-.25-.45-1.29.1-2.64c0 0 .84-.27 2.75 1.02c.79-.22 1.65-.33 2.5-.33c.85 0 1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02c.55 1.35.2 2.39.1 2.64c.65.71 1.03 1.6 1.03 2.71c0 3.82-2.34 4.66-4.57 4.91c.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2z" fill="currentColor"></path></svg>
+                                                </a>
+                                        </div>
+                                        <div class="nav-icon">
+                                            <a href="https://www.linkedin.com/in/dipen-chavda-391087189/" target="_blank">
+                                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--mdi" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77z" fill="currentColor"></path></svg>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </nav>
                             </div>
                             <div class="component-code-section">
                                 <script type="text/plain" class="language-markup code-snippet">
-                                    <div class="avatar  av-sm">
-                                        <img src=".." alt="..">
-                                        <div class="badge online right bottom"></div>
-                                    </div>
-                                    <div class="avatar av-sm">
-                                        <img src=".." alt="..">
-                                        <div class="badge offline right bottom"></div>
-                                    </div>
-                                    <div class="avatar av-sm">
-                                        <img src=".." alt="..">
-                                        <div class="badge dnd right bottom"></div>
-                                    </div>
-                                </script>
-                            </div>
-                        </section>
-                        <div class="divider mb-2"></div>
-                        <h2 class="mb-2"  id="badge-on-icons">Badge on icons</h2>
-                        <p class="mb-2">Here we have different classes secified for the alignment of the badge on the icon like <code class="code-text">top</code> , <code class="code-text">right</code> , <code class="code-text">bottom</code> and <code class="code-text">left</code> and for the numbered badge we have the class <code class="code-text">number-badge</code>.</p>
-                        <section class="component-scetion mb-2">
-                            <div class="component-display">
-                                <div class="icon av-sm">
-                                    <svg xmlns="http>://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--mdi" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path d="M17 18c-1.11 0-2 .89-2 2a2 2 0 0 0 2 2a2 2 0 0 0 2-2a2 2 0 0 0-2-2M1 2v2h2l3.6 7.59l-1.36 2.45c-.15.28-.24.61-.24.96a2 2 0 0 0 2 2h12v-2H7.42a.25.25 0 0 1-.25-.25c0-.05.01-.09.03-.12L8.1 13h7.45c.75 0 1.41-.42 1.75-1.03l3.58-6.47c.07-.16.12-.33.12-.5a1 1 0 0 0-1-1H5.21l-.94-2M7 18c-1.11 0-2 .89-2 2a2 2 0 0 0 2 2a2 2 0 0 0 2-2a2 2 0 0 0-2-2z" fill="currentColor"></path></svg>
-                                    <div class="badge right top number-badge dnd">5</div>
-                                </div>
-                                <div class="icon av-sm">
-                                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--mdi" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6m-2 0l-8 5l-8-5h16m0 12H4V8l8 5l8-5v10z" fill="currentColor"></path></svg>
-                                    <div class="badge right top number-badge dnd">9</div>
-                                </div>
-                            </div>
-                            <div class="component-code-section">
-                                <script type="text/plain" class="language-markup code-snippet">
-                                    <div class="icon av-sm">
-                                        <svg file>
-                                            <div class="badge right top number-badge dnd">5</div>
-                                    </div>
-                                    <div class="icon av-sm">
-                                        <svg file>
-                                            <div class="badge right top number-badge dnd">9</div>
-                                    </div>
+                                    <nav class="navigation-bar">
+                                        <div class="lib-name">
+                                            <a href="..">ZestUI</a>
+                                        </div>
+                                        <div class="nav-list">
+                                            <ul>
+                                                <li><a href="#">Docs</a></li>
+                                                <li><a href="#">Examples</a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="social-icon m-left-auto">
+                                            <div class="nav-icon">
+                                                <a href=".." target="_blank">
+                                                    <svg file></svg>
+                                                </a>
+                                            </div>
+                                            <div class="nav-icon">
+                                                <a href=".." target="_blank">
+                                                    <svg file></svg>
+                                                    </a>
+                                            </div>
+                                            <div class="nav-icon">
+                                                <a href=".." target="_blank">
+                                                <svg file></svg>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </nav>
                                 </script>
                             </div>
                         </section>
@@ -146,8 +146,7 @@
                         <div class="aside-list-container aside-right-list">
                             <ul>
                                 <h3>On this page</h3>
-                                <li class="aside-list"><a href="#badge-on-avatar">Badge on avatar</a></li>
-                                <li class="aside-list"><a href="#badge-on-icons">Badge on icons</a></li>
+                                <li class="aside-list"><a href="#navigation-bar">Navigation bar</a></li>
                             </ul>
                         </div>
                         </div>
