--- a/components/rating/rating.html
+++ b/components/rating/rating.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../prism/prism.css">
     <link rel="stylesheet" href="../../CSS/documentation.css">
-    <link rel="stylesheet" href="./image.css">
+    <link rel="stylesheet" href="../button/button.css">
+    <link rel="stylesheet" href="../typography/typography.css">
+    <link rel="stylesheet" href="./rating.css">
+    <script src="https://kit.fontawesome.com/fd5cc9ac67.js" crossorigin="anonymous" defer></script>
     <script src="../../prism/prism.js"></script>
-    <title>Image | ZestUI</title>
+    <title>Rating | ZestUI</title>
 </head>
 <body>
     <!-- <div class="mega-parent-flex-container"> -->
@@ -61,65 +64,70 @@
                                     <li class="aside-list"><a href="../alert/alert.html">Alert</a></li>
                                     <li class="aside-list"><a href="../button/button.html">Button</a></li>
                                     <li class="aside-list"><a href="../card/card.html">Card</a></li>
-                                    <li class="aside-list active-list-item"><a href="./image.html">Image</a></li>
+                                    <li class="aside-list"><a href="../image/image.html">Image</a></li>
                                     <li class="aside-list"><a href="../input/input.html">Input</a></li>
                                     <li class="aside-list"><a href="../typography/typography.html">Typography</a></li>
                                     <li class="aside-list"><a href="../list/list.html">List</a></li>
                                     <li class="aside-list"><a href="../navigation/navigation.html">Navigation</a></li>
                                     <li class="aside-list"><a href="../modal/modal.html">Modal</a></li>
-                                    <li class="aside-list"><a href="../rating/rating.html">Rating</a></li>
+                                    <li class="aside-list active-list-item"><a href="./rating.html">Rating</a></li>
                                 </ul>
                             </div>
                         </div>
                     </aside>
                     <div class="content-main-section">
-                        <h1>Image</h1>
-                        <p class="mb-2">Image can be used to display large picture on the website.</p>
+                        <h1>Rating</h1>
+                        <p class="mb-2">Rating components can be used as read-only badge or in reviews section. Can be used in reviews section as form too.</p>
                         <div class="divider mb-2"></div>
-                        <h2 class="mb-2" id="round-images">Round images</h2>
-                        <p class="mb-2">These are circular images. We can make image circular using <code class="code-text">img-round</code>.</p>
+                        <h2 class="mb-2" id="rating">Rating</h2>
                         <section class="component-scetion mb-2">
                             <div class="component-display">
-                                <img src="../../assets/imgs/batman-img.jpg" class="img img-round">
-                                <img src="../../assets/imgs/batman-profile.jpg" class="img img-round">
-                            </div>
-                            <div class="component-code-section">
-                                <script type="text/plain" class="language-markup code-snippet">
-                                    <img src=".." class="img img-round">
-                                    <img src=".." class="img img-round">
-                                </script>
-                            </div>
-                        </section>
-
-                        <div class="divider mb-2"></div>
-                        <h2 class="mb-2" id="square-images">Square images</h2>
-                        <p class="mb-2">These are square images with curved edges. We can make image square using <code class="code-text">img-square</code>.</p>
-                        <section class="component-scetion mb-2">
-                            <div class="component-display">
-                                <img src="../../assets/imgs/batman-img.jpg" class="img img-square">
-                                <img src="../../assets/imgs/batman-profile.jpg" class="img img-square">
-                            </div>
-                            <div class="component-code-section">
-                                <script type="text/plain" class="language-markup code-snippet">
-                                    <img src=".." class="img img-square">
-                                    <img src=".." class="img img-square">
-                                </script>
-                            </div>
-                        </section>
-
-                        <div class="divider mb-2"></div>
-                        <h2 class="mb-2" id="responsive-images">Responsive images</h2>
-                        <p class="mb-2">To make an image responsive use this class <code class="code-text">img-responsive</code>.</p>
-                        <section class="component-scetion mb-2">
-                            <div class="component-display">
-                                <div class="img-container">
-                                    <img src="../../assets/imgs/batman-profile.jpg" class="img-responsive" alt="batman image">
+                                <div class="rating-star-container">
+                                    <label>
+                                        <input class="rating-star-input" type="checkbox" checked disabled >
+                                        <i class="fas fa-star rating-star-icon"></i>
+                                    </label>
+                                    <label>
+                                        <input class="rating-star-input" type="checkbox" checked disabled>
+                                        <i class="fas fa-star rating-star-icon"></i>
+                                    </label>
+                                    <label>
+                                        <input class="rating-star-input" type="checkbox" checked disabled>
+                                        <i class="fas fa-star rating-star-icon"></i>
+                                    </label>
+                                    <label>
+                                        <input class="rating-star-input" type="checkbox" disabled >
+                                        <i class="fas fa-star rating-star-icon"></i>
+                                    </label>
+                                    <label>
+                                        <input class="rating-star-input" type="checkbox" disabled >
+                                        <i class="fas fa-star rating-star-icon"></i>
+                                    </label>
                                 </div>
                             </div>
                             <div class="component-code-section">
                                 <script type="text/plain" class="language-markup code-snippet">
-                                    <div class="img-container">
-                                        <img src=".." class="img-responsive" alt="..">
+                                    <div class="rating-star-container">
+                                        <label>
+                                            <input class="rating-star-input" type="checkbox" checked disabled >
+                                            <i class="fas fa-star rating-star-icon"></i>
+                                        </label>
+                                        <label>
+                                            <input class="rating-star-input" type="checkbox" checked disabled>
+                                            <i class="fas fa-star rating-star-icon"></i>
+                                        </label>
+                                        <label>
+                                            <input class="rating-star-input" type="checkbox" checked disabled>
+                                            <i class="fas fa-star rating-star-icon"></i>
+                                        </label>
+                                        <label>
+                                            <input class="rating-star-input" type="checkbox" disabled >
+                                            <i class="fas fa-star rating-star-icon"></i>
+                                        </label>
+                                        <label>
+                                            <input class="rating-star-input" type="checkbox" disabled >
+                                            <i class="fas fa-star rating-star-icon"></i>
+                                        </label>
                                     </div>
                                 </script>
                             </div>
@@ -131,9 +139,7 @@
                         <div class="aside-list-container aside-right-list">
                             <ul>
                                 <h3>On this page</h3>
-                                <li class="aside-list"><a href="#round-images">Round images</a></li>
-                                <li class="aside-list"><a href="#square-images">Square images</a></li>
-                                <li class="aside-list"><a href="#responsive-images">Responsive images</a></li>
+                                <li class="aside-list"><a href="#rating">Rating</a></li>
                             </ul>
                         </div>
                         </div>
