--- a/components/typography/typography.html
+++ b/components/typography/typography.html
@@ -66,6 +66,7 @@
                                     <li class="aside-list active-list-item"><a href="./typography.html">Typography</a></li>
                                     <li class="aside-list"><a href="../list/list.html">List</a></li>
                                     <li class="aside-list"><a href="../modal/modal.html">Modal</a></li>
+                                    <li class="aside-list"><a href="../rating/rating.html">Rating</a></li>
                                     
                                 </ul>
                             </div>
