--- a/components/button/button.html
+++ b/components/button/button.html
@@ -70,6 +70,7 @@
                                     <li class="aside-list"><a href="../list/list.html">List</a></li>
                                     <li class="aside-list"><a href="../navigation/navigation.html">Navigation</a></li>
                                     <li class="aside-list"><a href="../modal/modal.html">Modal</a></li>
+                                    <li class="aside-list"><a href="../rating/rating.html">Rating</a></li>
                                 </ul>
                             </div>
                         </div>
