rating and snackbar done

--- a/components/modal/modal.html
+++ b/components/modal/modal.html
@@ -70,6 +70,7 @@
                                     <li class="aside-list"><a href="../navigation/navigation.html">Navigation</a></li>
                                     <li class="aside-list active-list-item"><a href="./modal.html">Modal</a></li>
                                     <li class="aside-list"><a href="../rating/rating.html">Rating</a></li>
+                                    <li class="aside-list"><a href="../snackbar/snackbar.html">Snackbar</a></li>
                                 </ul>
                             </div>
                         </div>
