--- a/CSS/colors.css
+++ b/CSS/colors.css
@@ -24,4 +24,7 @@
     --rating-icon-color : #ffb400;
     --rating-icon-hover :  #ffd675;
     --rating-star-icon-dull : rgba(0, 0, 0, 0.26);
+    --snackbar-background-color : #333;
+    --snackbar-btn-color : cyan;
+    --snackbar-btn-color-hover : rgba(0, 255, 255, 0.13);
 }
