--- a/components/navigation/navigation.html
+++ b/components/navigation/navigation.html
@@ -65,9 +65,10 @@
                                     <li class="aside-list"><a href="../input/input.html">Input</a></li>
                                     <li class="aside-list"><a href="../typography/typography.html">Typography</a></li>
                                     <li class="aside-list"><a href="../list/list.html">List</a></li>
-                                    <li class="aside-list"><a href="./navigation.html">Navigation</a></li>
+                                    <li class="aside-list active-list-item"><a href="./navigation.html">Navigation</a></li>
                                     <li class="aside-list"><a href="../modal/modal.html">Modal</a></li>
                                     <li class="aside-list"><a href="../rating/rating.html">Rating</a></li>
+                                    <li class="aside-list"><a href="../snackbar/snackbar.html">Snackbar</a></li>
                                 </ul>
                             </div>
                         </div>
