--- a/components/rating/rating.html
+++ b/components/rating/rating.html
@@ -71,6 +71,7 @@
                                     <li class="aside-list"><a href="../navigation/navigation.html">Navigation</a></li>
                                     <li class="aside-list"><a href="../modal/modal.html">Modal</a></li>
                                     <li class="aside-list active-list-item"><a href="./rating.html">Rating</a></li>
+                                    <li class="aside-list"><a href="../snackbar/snackbar.html">Snackbar</a></li>
                                 </ul>
                             </div>
                         </div>
